--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,9 +68,9 @@
     <string name="OWSLAProgramPercentageNoon">Selection rate of Noon shift</string>
     <string name="OWSLAProgramPercentageNight">Selection rate of Night shift</string>
     ================================Worker==========================================================
-    <string name="WorkerLeave">Leave</string>
-    <string name="WorkerUnPaidLeave">Unpaid leave</string>
-    <string name="WorkerPaidLeave">Paid leave</string>
+    <string name="WorkerLeave">Day off</string>
+    <string name="WorkerUnPaidLeave">Unpaid day off</string>
+    <string name="WorkerPaidLeave">Paid day off</string>
     <string name="WorkerVacation">Vacation</string>
     ==============================Months============================================================
     <string name="Month">Month</string>
