--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -74,7 +74,7 @@
     <string name="WorkerPaidLeave">Ρεπό με αποδοχές</string>
     <string name="WorkerVacation">Διακοπές</string>
     <string name="WorkerShiftType">Βάρδια :</string>
-    <string name="WorkerTilVacation">Δικαίωμα αδείας</string>
+    <string name="WorkerTilVacation">Δικ. αδείας</string>
     <string name="WorkerTeamName">Όνομα ομάδας</string>
     <string name="WorkerName">Όνομα</string>
     ================================Months==========================================================
