--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="WorkerPaidLeave">Paid day off</string>
     <string name="WorkerVacation">Vacation</string>
     <string name="WorkerShiftType">Shift :</string>
-    <string name="WorkerTilVacation">Vacation Rights</string>
+    <string name="WorkerTilVacation">Vac. Rights</string>
     <string name="WorkerTeamName">Team name</string>
     <string name="WorkerName">Name</string>
     ==============================Months============================================================
